Add Initial HTML introduction page

--- a/study/Html/Day1.html
+++ b/study/Html/Day1.html
@@ -17,7 +17,7 @@
             track front-end at <b>ALX</b> has equipped me with a solid understanding of information <br>
             technology principles, including software development, networking, and database management. <br> 
             I'm passionate about staying updated with the latest tech trends and exploring new opportunities for growth. <br>
-            Currently, I work at <a href="https://sama-link.com/" target="_blank"><strong>SamaLink</strong></a> Company.
+            Currently, I work at <a href="https://www.facebook.com/SamaLink2013" target="_blank"><strong>SamaLink</strong></a> Company.
         </p> <!-- Personal introduction paragraph -->
         <h2>My Hobbies</h2> <!-- indicating hobbies section -->
         <p>In fact, I love <i>drawing</i>, and I love anyone who loves <strong>drawing</strong> :),<br> 
